--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: rgb(201,255,0);
+    background: linear-gradient(90deg, rgba(201,255,0,1) 0%, rgba(158,163,46,1) 50%, rgba(28,144,13,1) 100%);
 }
 
 code {
