--- a/Client/src/components/card/Card.module.css
+++ b/Client/src/components/card/Card.module.css
@@ -1,25 +1,40 @@
 
 .contenedorCard {
 
-    
     width: 270px;
     margin: auto;
+    padding-bottom: 1px;
+    margin-bottom: 30px;
     box-sizing: border-box;
     border-radius: 30px;
     background-image: url('https://us.123rf.com/450wm/pitsvector/pitsvector1610/pitsvector161000147/67664951-ilustraci%C3%B3n-de-vector-de-fondo-espacio-y-estrella.jpg');
     
 }
 
+.favBoton {
+
+    background-color: transparent;
+    margin: 10px;
+    font-size: 14px;
+    border: solid 1px;
+    border-color: rgb(201,255,0);
+    border-radius: 6px;
+    color: rgb(201,255,0);
+}
+
 
 .name {
     
-    font-family: url();
-    width: 40%;
-    padding-bottom: 5px;
-    font-size: 15px;
+    width: 50%;
+    height: 40px;
+    font-size: 14px;
     background: rgb(201,255,0);
     background: linear-gradient(90deg, rgba(201,255,0,1) 0%, rgba(158,163,46,1) 50%, rgba(28,144,13,1) 100%);
     margin: auto;
+    border-radius: 10px;
+    color: black;
+    text-decoration: none;
+    list-style: none;
 
 }
 
