--- a/Client/src/components/favorites/Favorites.module.css
+++ b/Client/src/components/favorites/Favorites.module.css
@@ -9,3 +9,26 @@
     margin-top: 200px;
     margin-bottom: 200px;
 }
+
+.contenedorOpciones {
+
+    width: 100%;
+    height: 50px;
+    margin: auto;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    margin-top: 30px;
+}
+
+.opcionesStyle {
+
+    margin: 6px;
+    background: rgba(39, 34, 34, 0.987);
+    color: white;
+    width: 30%;
+    max-width: 150px;
+    padding: 5px;
+    height: 35px;
+    text-align: center;
+    border-radius: 10px;
+}
