--- a/Client/src/components/nav/Nav.module.css
+++ b/Client/src/components/nav/Nav.module.css
@@ -1,6 +1,26 @@
 
 .navCont {
 
-    background-color: rgb(0, 0, 0);
-    width: 100%;
+    margin: auto;
+    width: 90%;
+    height: 125px;
+    max-width: 550px;
+    padding: 10px;
+    background: rgba(39, 34, 34, 0.987);
+    border-radius: 0px 0px 10px 10px;
 }
+
+.botonStyle {
+
+    margin: 8px;
+    width: 80px;
+    height: 40px;
+    padding: 8px;
+    background: rgb(201,255,0);
+    background: linear-gradient(90deg, rgba(201,255,0,1) 0%, rgba(158,163,46,1) 50%, rgba(28,144,13,1) 100%);
+    border-radius: 10px;
+    color: black;
+    font-size: 12px;
+    text-decoration: none;
+    border: none;
+  }
